force-app/main/default/objects/Sanction__c/Sanction__c.object-meta.xml
<CustomObject>
    <label>Sanction</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Sanction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sanctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>