force-app/main/default/objects/Sanction__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Sanctions</relationshipLabel>
    <relationshipName>Sanctions</relationshipName>
    <type>Lookup</type>
</CustomField>