force-app/main/default/objects/Sanction__c/fields/Sanction_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Approval_Status__c</fullName>
    <label>Sanction Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>