force-app/main/default/objects/Sanction__c/fields/Sanction_Type__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Type__c</fullName>
    <label>Sanction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>License Sanctioned - Allow Placement Referrals</fullName>
            </value>
            <value>
                <fullName>License Sanctioned - No New Placement Referrals</fullName>
            </value>
            <value>
                <fullName>License Suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>